new_tests/semantics/type/bad/036_IS2.cm

if(3 < 4) {

} else if(4 > 3) {

} else if (4 + 3) {

} else if(True == False) {

} else {}
